# my-whiskies

./: .flaskenv  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TASKS.md  app.py  config.py  my-whiskies.py  pyproject.toml  requirements.txt  whiskey.py
.github/: labels.yml
.github/workflows/: ci.yml
app/: __init__.py  email.py  extensions.py  models.py
app/auth/: __init__.py  email.py  forms.py  routes.py
app/errors/: __init__.py  handlers.py
app/main/: __init__.py  forms.py  handler.py  routes.py
app/models/: __init__.py  bottle.py  user.py
app/templates/: _flash.html  _footer.html  _head.html  _navbar.html  _scripts.html  add_bottle.html  base.html  bottle_add.html  bottle_add.txt  bottle_detail.html  bottle_edit.html  bottle_list.html  bottler_detail.html  bottler_edit.html  bottler_list.html  distillery_add.html  distillery_detail.html  distillery_edit.html  distillery_list.html  home.html  index.html  terms.html  tos.html  tos_cookies.html  (+1 more)
config/: my-whiskies.conf  my-whiskies.ini  my-whiskies.service
logs/: my-whiskies.log.2023-03-06  my-whiskies.log.2023-03-11  my-whiskies.log.2023-03-12
my_whiskies/: __init__.py  email.py  models.py
mywhiskies/: __init__.py  app.py  cli.py  database.py  extensions.py  handler.py  logging.py  signals.py
scripts/: clean_orphaned_bottle_images.py  label_sync.py  migrate_images_png_to_jpg.py  migrate_mysql_to_pg.py  populate_bottle_images.py  post_userdata.sh  restore_bottle_barrel_picker.py  seed_data.py  strip_exif_existing_images.py  user_cleanup.py  userdata.sh
tests/: conftest.py
(+343 files in other folders)
