[project]
name = "my-whiskies"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.9.4",
    "boto3==1.42.87",
    "email-validator==1.3.1",
    "Flask==3.1.3",
    "Flask-Login==0.6.3",
    "Flask-Mail==0.10.0",
    "Flask-Migrate==4.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.2",
    "Mako>=1.3.11",
    "mysqlclient==2.1.1",
    "nh3==0.3.5",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "Pillow==12.2.0",
    "PyJWT==2.12.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.2.2",
    "PyYAML==6.0.2",
    "requests==2.33.1",
    "SQLAlchemy==2.0.49",
    "Werkzeug==3.1.8",
    "WTForms==3.0.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.4",
    "Faker==40.13.0",
    "pytest==9.0.3",
    "pytest-cov==6.0.0",
    "pytest-flask==1.3.0",
    "pytest-playwright",
    "ruff==0.15.11",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end browser tests (require live server + Playwright)",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["mywhiskies"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
